UNRELEASED CHANGES:

* Add ability to set a reminder for a life event
* Stop reporting OAuth exceptions
* Replace karakus/laravel-cloudflare with monicahq/laravel-cloudflare to fix dependencies issues

RELEASED VERSIONS:

v2.8.0 - 2018-09-28
-------------------

* Add ability to track life events
* Add ability to define the default email address used for support
* Add sentry:release command
* Add Envoy file template
* Add passport config file
* Add new variable APP_DISPLAY_NAME
* Rename env variable 2FA_ENABLED to MFA_ENABLED (2FA_ENABLED is still functional for compatibility reasons)
* Improve search
* Fix reminders displaying wrong date
* Fix select boxes not working properly anymore
* Fix confirm email sent when signup_double_optin is false
* Fix now() without timezone functions
* Remove notion of events
* Support papertrail logging

v2.7.1 - 2018-09-05
-------------------

* Fix duplication of modules in the Settings page

v2.7.0 - 2018-09-04
-------------------

* Add ability to log conversations made on social networks or SMS
* Add language selector on register page
* Support Arabic language
* Improve automatic route binding
* Split app css in two files for better support of ltr/rtl text direction
* Add helper function htmldir()
* Fix gifts not showing when value was not set
* Fix phpunit not parsing all test files
* Fix login remember with 2fa and u2f enabled
* Fix gender update
* Fix how comparing version is done
* Fix search with wrong search field
* Fix gift recipient relation
* Fix subscription cancel on account deletion
* Fix email maximum size on settings
* Fix reminder link in email sent

v2.6.0 - 2018-08-17
-------------------

* Add ability to set a contact as favorite
* Add ability to search for a contact in the dropdown when creating a relationship
* Add activity reports page, which shows useful statistics about activities with a specific contact
* Fix reminders not being sent for single-digit hours
* Fix accounts with an empty reminder time